--- a/views/default/show.html
+++ b/views/default/show.html
@@ -1,13 +1,13 @@
 {{extend 'layout.html'}}
 <h1>Image: {{=image.title}}</h1>
 <div style="text-align:center">
-<img width="200px"
+<img width="400px"
      src="{{=URL('download', args=image.file)}}" />
 </div>
 {{if len(comments):}}
   <h2>Comments</h2><br /><p>
   {{for post in comments:}}
-    <p>{{=post.author}} says <i>{{=post.body}}</i></p>
+<p>{{=post.author}} <b>says</b> <i>{{=post.body}}</i></p>
   {{pass}}</p>
 {{else:}}
   <h2>No comments posted yet</h2>
